replace firebase deeplink with normal web url

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img src="./assets/images/LOGO.svg" class="logo" width="178px" alt="Saaei - ساعي">
             <ul class="links">
                 <li>
-                    <a href="https://appsaaei.page.link/HY9VycaDkYjV9oCq6" target="_blank">
+                    <a href="https://saaei.co/realty-management/view-realty-advertisement/20749" target="_blank">
                         <svg width="16" height="18" viewBox="0 0 16 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" clip-rule="evenodd"
                             d="M0 10.4275C0 5.73499 0.511666 6.06249 3.26583 3.50832C4.47083 2.53832 6.34583 0.666656 7.965 0.666656C9.58333 0.666656 11.4958 2.52916 12.7117 3.50832C15.4658 6.06249 15.9767 5.73499 15.9767 10.4275C15.9767 17.3333 14.3442 17.3333 7.98833 17.3333C1.6325 17.3333 0 17.3333 0 10.4275Z"
